--- a/yamls/kind.yaml.j2
+++ b/yamls/kind.yaml.j2
@@ -1,4 +1,18 @@
-{% set nodeTag = "v1.21.14" -%}
+{%- if k8s_version is not defined -%}
+  {%- set k8s_version = "v1.26.0" -%}
+{%- endif -%}
+{%- if kube_proxy_mode is not defined -%}
+  {%- set kube_proxy_mode = "ipvs" -%}
+{%- endif -%}
+{%- if ip_family is not defined -%}
+  {%- set ip_family = "ipv4" -%}
+{%- endif -%}
+{%- if ha is not defined -%}
+  {%- set ha = "false" -%}
+{%- endif -%}
+{%- if single is not defined -%}
+  {%- set single = "false" -%}
+{%- endif -%}
 {%- if api_server_address is not defined -%}
   {%- set api_server_address = "127.0.0.1" -%}
 {%- endif -%}
@@ -24,15 +38,16 @@ kubeadmConfigPatches:
 
 nodes:
   - role: control-plane
-    image: kindest/node:{{ nodeTag }}
-  {%- if ha is equalto "true" %}
-  - role: control-plane
-    image: kindest/node:{{ nodeTag }}
-  - role: control-plane
-    image: kindest/node:{{ nodeTag }}
-  {%- elif single is equalto "true" %}
-
-  {%- else %}
+    image: kindest/node:{{ k8s_version }}
+{%- if single is equalto "false" %}
   - role: worker
-    image: kindest/node:{{ nodeTag }}
+    image: kindest/node:{{ k8s_version }}
+  {%- if ha is equalto "true" %}
+    labels:
+      kube-ovn/role: master
+  - role: worker
+    image: kindest/node:{{ k8s_version }}
+    labels:
+      kube-ovn/role: master
   {%- endif %}
+{%- endif %}
