--- a/yamls/kind.yaml.j2
+++ b/yamls/kind.yaml.j2
@@ -10,6 +10,9 @@
 {%- if ha is not defined -%}
   {%- set ha = "false" -%}
 {%- endif -%}
+{%- if ovn_ic is not defined -%}
+  {%- set ovn_ic = "false" -%}
+{%- endif -%}
 {%- if single is not defined -%}
   {%- set single = "false" -%}
 {%- endif -%}
@@ -59,5 +62,10 @@ nodes:
     image: kindest/node:{{ k8s_version }}
     labels:
       kube-ovn/role: master
+  {%- elif ovn_ic is equalto "true" %}
+  - role: worker
+    image: kindest/node:{{ k8s_version }}
+  - role: worker
+    image: kindest/node:{{ k8s_version }}
   {%- endif %}
 {%- endif %}
