--- a/yamls/kind.yaml.j2
+++ b/yamls/kind.yaml.j2
@@ -1,5 +1,5 @@
 {%- if k8s_version is not defined -%}
-  {%- set k8s_version = "v1.27.3" -%}
+  {%- set k8s_version = "v1.28.6" -%}
 {%- endif -%}
 {%- if kube_proxy_mode is not defined -%}
   {%- set kube_proxy_mode = "ipvs" -%}
@@ -58,6 +58,8 @@ kubeadmConfigPatches:
 nodes:
   - role: control-plane
     image: kindest/node:{{ k8s_version }}
+    labels:
+      type: kind
 {%- if port_mapping is defined %}
   {%- set container_port = port_mapping.split(':')[0] %}
   {%- set host_port = port_mapping.split(':')[1] %}
@@ -74,15 +76,23 @@ nodes:
 {%- if single is equalto "false" %}
   - role: worker
     image: kindest/node:{{ k8s_version }}
-  {%- if ha is equalto "true" %}
     labels:
+      type: kind
+  {%- if ha is equalto "true" %}
       kube-ovn/role: master
   - role: worker
     image: kindest/node:{{ k8s_version }}
     labels:
+      type: kind
       kube-ovn/role: master
   {%- elif ovn_ic is equalto "true" %}
   - role: worker
     image: kindest/node:{{ k8s_version }}
+    labels:
+      type: kind
+  - role: worker
+    image: kindest/node:{{ k8s_version }}
+    labels:
+      type: kind
   {%- endif %}
 {%- endif %}
